# University

AE-40Project/: AE-40Project.sln  h264mp3_1.sdp  mp3.sdp
AE-40Project/BasicUsageEnvironment/: BasicUsageEnvironment.vcxproj  BasicUsageEnvironment.vcxproj.filters  stdafx.cpp
AE-40Project/JSONCpp/: JSONCpp.vcxproj  JSONCpp.vcxproj.filters  stdafx.cpp
AE-40Project/Media/: Encoder.cpp  Encoder.h  H264LiveSource.cpp  H264LiveSource.h  MPEG2LiveSource.cpp  MPEG2LiveSource.h  Media.cpp  Media.h  Media.vcxproj  Media.vcxproj.filters  Utilities.cpp  Utilities.h  stdafx.cpp
AE-40Project/Network/: MySocket.cpp  MySocket.h  Network.vcxproj  Network.vcxproj.filters  Tcp.cpp  Tcp.h  stdafx.h
AE-40Project/Receiver/: App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Receiver.csproj
AE-40Project/Server/: Server.cpp  Server.vcxproj
AE-40Project/UsageEnvironment/: UsageEnvironment.vcxproj  UsageEnvironment.vcxproj.filters  stdafx.cpp
AE-40Project/WpfApp1/: MainWindow.xaml  MainWindow.xaml.cs  Tester.csproj
AE-40Project/groupsock/: groupsock.vcxproj  groupsock.vcxproj.filters  stdafx.cpp
AE-40Project/liveMedia/: liveMedia.vcxproj  liveMedia.vcxproj.filters  stdafx.cpp
AdvancedProgramming/Project/: BfsSearch.cpp  BfsSearch.h  CMakeLists.txt  Cab.cpp  Cab.h  ClientMain.cpp  ClientParser.cpp  ClientParser.h  Clock.cpp  Clock.h  DriveThread.cpp  DriveThread.h  Driver.cpp  Driver.h  DriverConect.cpp  DriverConect.h  DriversCenter.cpp  DriversCenter.h  LuxuryCab.cpp  LuxuryCab.h  MainFlow.cpp  MainFlow.h  Map.cpp  Map.h  Node.cpp  Node.h  Parser.cpp  Parser.h  Passanger.cpp  Passanger.h  Point.cpp  Point.h  PointNode.cpp  PointNode.h  Socket.cpp  Socket.h  Statistics.cpp  Statistics.h  Task.cpp  Task.h  (+15 more)
AdvancedProgramming/Project/tests/: BfsSearchTest.cpp  BfsSearchTest.h  CabTest.cpp  LuxuryCabTest.cpp  MainFlowTest.cpp  MapTest.cpp  MapTest.h  PassengerTest.cpp  PointNodeTest.cpp  TaxiCenterTest.cpp  TripTest.cpp  pointTest.cpp
AdvancedProgramming2/Ex1-2/: Beauty and the Beast (2017) [720p] [YTS.AG].torrent  ex1.sln  gitEx1.txt
AdvancedProgramming2/Ex3/: Ex3.sln  LogIn.html  Maze.css  Maze.html  MultiPlayer.html  navBar.css  (+7 more)
ArificialIntelligence/: README.md
ComputerNetworking/: Server.py
MachineLearning/: TestScript.py  boolean_conj_predictor.py  data.txt  details.txt  ex2.py  ex_3.py  ex_8_code.py  gengerate.py  myexample.txt  output.txt  output2.txt  test-data.txt  test_script.py
OperatingSystems/OperatingSystems2/: CMakeLists.txt  a.out  ex2.c  ex2_inp.c  ex2_inp.out  ex2_inp_test.c  ex2_upd.c  ex2_upd.out  test.txt
ProgrammingLanguages/: README.md
(+169 files in other folders)
